--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -5,7 +5,7 @@
   text-align: center;
   font-weight: 600;
   font-size: 1.2rem;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 @media (min-width: 1000px) and (min-height: 700px) {
