--- a/src/components/Navigation/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.css
@@ -5,4 +5,11 @@
   display: flex;
   align-items: center;
   height: 100%;
+  flex-direction: column;
+}
+
+@media (min-width: 500px) {
+  .NavigationItems {
+    flex-direction: row;
+  }
 }
